--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
+    "build": "npx next build",
+    "start": "npx next start",
+    "lint": "npx next lint",
+    "export": "npx next export",
     "deploy": "npm run build && npm run export"
   },
   "dependencies": {
