--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -7,15 +7,27 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: 20
+        cache: "pnpm"
 
-    - name: Cache dependencies ⚡
-      id: cache_dependencies
+    - name: Install pnpm
+        run: corepack enable && corepack prepare pnpm@latest --activate
+
+    - name: Cache pnpm store ⚡
+      id: cache_pnpm
       uses: actions/cache@v3
       with:
-        path: node_modules
-        key: node-modules-${{ hashFiles('package-lock.json') }}
+        path: ~/.pnpm-store
+        key: pnpm-store-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+        restore-keys: |
+          pnpm-store-${{ runner.os }}-
+
+    - name: Verify output directory
+      run: ls -la # Debugging step
+
+    - name: Verify output directory pt 2
+      run: ls -la out/ # Debugging step
 
     - name: Install dependencies 🔧
       shell: bash
       if: steps.cache_dependencies.outputs.cache-hit != 'true'
-      run: npm install
+      run: pnpm install
