add debug output

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,12 @@ jobs:
       - name: Build with Next.js 🏗️
         run: pnpm build
 
+      - name: Verify output directory
+        run: ls -la
+
+      - name: Verify output directory pt 2
+        run: ls -la out/
+
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
         with:
