set up blog template

--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -1,5 +1,5 @@
 name: setup-node
-description: "⚙️ Setup Node.js & PNPM ⚡🔧"
+description: "Setup Node.js ⚙️ - Setup pnpm ⚡ - Install dependencies 🔧"
 runs:
   using: "composite"
   steps:
