--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "npx next build",
     "start": "npx next start",
     "lint": "npx next lint",
@@ -11,10 +11,15 @@
     "deploy": "npm run build && npm run export"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "export": "^0.1.337",
+    "gray-matter": "^4.0.3",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
@@ -22,8 +27,10 @@
     "@types/node": "^20.17.24",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
+    "postcss": "^8.4.31",
     "tailwindcss": "^4.0.13",
     "typescript": "^5.8.2"
   }
